# mfethuls-public

./: README.md  env_example  pyproject.toml
src/mfethuls/config/: instrument_params.json
src/mfethuls/parsers/: __init__.py  ms.py
