[project]
name = "mfethuls"
version = "0.0.12"
description = "Composable framework for lab instrument data parsing, characterization and analysis for python people in labs."
authors = [{name = "Luca Bertossi", email = "lucabertossi@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "nmrglue>=0.11",
    "notebook>=6.5.3",
    "numpy>=1.24.2",
    "pandas>=1.5.3",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mfethuls = ["py.typed"]
"mfethuls.config" = ["*.json"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mfethuls = "mfethuls.main:main"
